# junkpile

./: README.md
feedback-tauri-v1-single-template/: package-lock.json  package.json
feedback-tauri-v1-single-template/src/: index.html  sketch.js
feedback-tauri-v1-single-template/src-tauri/icons/: icon.icns
p5-tauri-midi-template/: package-lock.json
p5-tauri-midi-template/src-tauri/: Cargo.toml
p5-tauri-midi-template/src-tauri/src/: main.rs
p5-tauri-osc-template/: package-lock.json
p5-tauri-osc-template/src-tauri/: Cargo.toml
p5-tauri-osc-template/src-tauri/src/: main.rs
p5-tauri-single-template/: README.md  package-lock.json  package.json
p5-tauri-single-template/src/: sketch.js
p5-tauri-single-template/src-tauri/: Cargo.toml  tauri.conf.json
p5-tauri-single-template/src-tauri/src/: main.rs
p5-tauri-ws-template/: README.md  package-lock.json  package.json
p5-tauri-ws-template/src/: canvas.js
v1/feedback-tauri-v1-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v1/feedback-tauri-v1-single-template/src-tauri/src/: main.rs
v1/feedback-tauri-v1-ws-template/: package-lock.json  package.json
v1/feedback-tauri-v1-ws-template/src/: canvas.html  canvas.js  controls.html  controls.js
v1/feedback-tauri-v1-ws-template/src-tauri/: Cargo.toml  tauri.conf.json
v1/feedback-tauri-v1-ws-template/src-tauri/src/: main.rs
v1/glsl-tauri-v1-single-template/: package-lock.json  package.json
v1/glsl-tauri-v1-single-template/src/: sketch.js
v1/glsl-tauri-v1-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v1/glsl-tauri-v1-ws-template/: package-lock.json  package.json
v1/glsl-tauri-v1-ws-template/src/: canvas.js  controls.html  controls.js
v1/glsl-tauri-v1-ws-template/src-tauri/: Cargo.toml  tauri.conf.json
v1/p5-tauri-midi-template/: package.json
v1/p5-tauri-midi-template/src/: index.html  sketch.js
v1/p5-tauri-midi-template/src-tauri/: tauri.conf.json
v1/p5-tauri-osc-template/: package.json
v1/p5-tauri-osc-template/src/: index.html  sketch.js
v1/p5-tauri-osc-template/src-tauri/: tauri.conf.json
v1/p5-tauri-ws-template/src/: controls.html
v1/p5-tauri-ws-template/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
v1/p5-tauri-ws-template/src-tauri/src/: main.rs
v1/webcam-tauri-v1-single-template/: package-lock.json  package.json
v1/webcam-tauri-v1-single-template/src/: index.html  sketch.js
v1/webcam-tauri-v1-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v1/webcam-tauri-v1-ws-template/: package-lock.json  package.json
v1/webcam-tauri-v1-ws-template/src/: canvas.html  controls.js
v1/webcam-tauri-v1-ws-template/src-tauri/: Cargo.toml  tauri.conf.json
v1/webgl-tauri-v1-single-template/: package.json
v1/webgl-tauri-v1-single-template/src/: sketch.js
v1/webgl-tauri-v1-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v1/webgl-tauri-v1-ws-template/: package.json
v1/webgl-tauri-v1-ws-template/src/: canvas.html  controls.html  controls.js
v1/webgl-tauri-v1-ws-template/src-tauri/: tauri.conf.json
v2/feedback-tauri-v2-single-template/: package-lock.json  package.json
v2/feedback-tauri-v2-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v2/feedback-tauri-v2-single-template/src-tauri/src/: main.rs
v2/feedback-tauri-v2-ws-template/: package-lock.json  package.json
v2/feedback-tauri-v2-ws-template/src/: canvas.js
v2/feedback-tauri-v2-ws-template/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
v2/glsl-tauri-v2-single-template/: package-lock.json  package.json
v2/glsl-tauri-v2-single-template/src/: index.html  shader.frag
v2/glsl-tauri-v2-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v2/glsl-tauri-v2-single-template/src-tauri/src/: main.rs
v2/glsl-tauri-v2-ws-template/: package-lock.json  package.json
v2/glsl-tauri-v2-ws-template/src/: canvas.html
v2/glsl-tauri-v2-ws-template/src-tauri/: Cargo.toml  tauri.conf.json
v2/p5-tauri-v2-single-template/: package.json
v2/p5-tauri-v2-single-template/src/: index.html  sketch.js
v2/p5-tauri-v2-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v2/p5-tauri-v2-single-template/src-tauri/src/: main.rs
v2/p5-tauri-v2-ws-template/: package.json
v2/p5-tauri-v2-ws-template/src/: canvas.html  canvas.js
v2/p5-tauri-v2-ws-template/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
v2/p5-tauri-v2-ws-template/src-tauri/src/: main.rs
v2/webcam-tauri-v2-single-template/: package.json
v2/webcam-tauri-v2-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v2/webcam-tauri-v2-ws-template/: package-lock.json  package.json
v2/webcam-tauri-v2-ws-template/src/: canvas.js  controls.html
v2/webcam-tauri-v2-ws-template/src-tauri/: Cargo.toml  tauri.conf.json
v2/webcam-tauri-v2-ws-template/src-tauri/src/: main.rs
v2/webgl-tauri-v2-single-template/: package.json
v2/webgl-tauri-v2-single-template/src/: index.html  sketch.js
v2/webgl-tauri-v2-single-template/src-tauri/: Cargo.toml  tauri.conf.json
v2/webgl-tauri-v2-ws-template/: package.json
v2/webgl-tauri-v2-ws-template/src/: canvas.js
v2/webgl-tauri-v2-ws-template/src-tauri/: Cargo.toml  tauri.conf.json
