[package]
name = "p5-tauri-midi-template"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri — we use tauri::command to expose MIDI device listing,
# and tauri::Manager + Window::emit() to push MIDI events to the frontend.
tauri = { version = "1", features = ["wry"] }

# Cross-platform MIDI input (CoreMIDI / ALSA / WinMM)
midir = "0.9"

# JSON serialisation for Tauri events
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Shared state: MIDI connection held across Tauri command calls
once_cell = "1"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
