[package]
name = "p5-tauri-osc-template"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri      = { version = "1", features = ["wry"] }
# rosc: pure-Rust OSC decoder/encoder, no external deps
rosc       = "0.10"
# Tokio for the async UDP listener
tokio      = { version = "1", features = ["full"] }
# JSON for Tauri events
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell  = "1"

[features]
default = []
custom-protocol = ["tauri/custom-protocol"]
