[package]
name = "p5-tauri-ws-template"
version = "0.1.0"
edition = "2021"

# Tauri build script (generates context! macro data)
[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
# Tauri core — "wry" enables the WebView renderer
tauri = { version = "1", features = ["wry"] }

# JSON serialisation/deserialisation (used for hello handshake parsing)
serde      = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime — "full" enables all Tokio features (TCP, tasks, sync, etc.)
tokio = { version = "1", features = ["full"] }

# WebSocket async utilities (Stream/Sink traits)
futures-util = "0.3"

# WebSocket server implementation built on Tokio
tokio-tungstenite = "0.21"

# Needed for TLS support (even though we use plain ws://, tungstenite requires it)
tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

# Lazy static initialisation for the global ClientMap
once_cell = "1"

[features]
default = []
# Required for Tauri release builds (wraps assets into the binary)
custom-protocol = ["tauri/custom-protocol"]
