[package]
name    = "webcam-tauri-v1-ws-template"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri             = { version = "1", features = ["wry"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tokio             = { version = "1", features = ["full"] }
futures-util      = "0.3"
tokio-tungstenite = "0.21"
tungstenite       = { version = "0.21", features = ["rustls-tls-webpki-roots"] }
once_cell         = "1"

[features]
default         = []
custom-protocol = ["tauri/custom-protocol"]
